--- a/MSSQLScriptExecutor/MSSQLScriptExecutor.csproj
+++ b/MSSQLScriptExecutor/MSSQLScriptExecutor.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <!-- indirect reference override for CVE-2024-27086 -->
     <PackageReference Include="Microsoft.Identity.Client" Version="4.61.3" />
+    <!-- indirect reference override for CVE-2024-30105 -->
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
     <PackageReference Include="System.Private.Uri" Version="4.3.2" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
